Upgrades to AndroidX and adopts material design about page
Signed-off-by: Rajkumar S <rajkumaar2304@gmail.com>

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,139 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     android:fillViewport="false"
-    tools:ignore="HardcodedText">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:orientation="vertical">
-
-
-            <com.github.siyamed.shapeimageview.RoundedImageView
-                android:id="@+id/image"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:onClick="openWebsite"
-                android:src="@drawable/raj"
-                android:visibility="visible"
-                app:siBorderColor="@android:color/white"
-                app:siBorderWidth="3dp"
-                app:siRadius="6dp"
-                app:siSquare="false" />
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/lato"
-                android:gravity="center"
-                android:text="Rajkumar"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-                android:textColor="@android:color/white" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <ImageView
-                    android:id="@+id/insta"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:padding="5dp" />
-
-                <ImageView
-                    android:id="@+id/fb"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:padding="5dp" />
-
-                <ImageView
-                    android:id="@+id/linkedin"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:padding="5dp" />
-
-                <ImageView
-                    android:id="@+id/github"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:padding="5dp" />
-
-                <ImageView
-                    android:id="@+id/site"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:padding="5dp" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:onClick="openWebsite"
-                android:text="rajkumaar.co.in"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-                android:textColor="@color/red" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="45dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="45dp"
-                android:orientation="horizontal">
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/button"
-                    android:onClick="donate"
-                    android:text="Donate"
-                    android:textColor="@color/colorBackground" />
-
-                <Button
-                    android:id="@+id/disclaimer"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/button"
-                    android:text="View Disclaimer"
-                    android:textColor="@color/colorBackground" />
-            </LinearLayout>
-
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="50dp"
-                android:background="@drawable/button"
-                android:onClick="ossLicenses"
-                android:text="Open Source Licenses"
-                android:textColor="@color/colorBackground" />
-
-        </LinearLayout>
-    </ScrollView>
-
-</RelativeLayout>
+    tools:ignore="HardcodedText" />
