--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -49,7 +49,7 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/kofi"
+                android:src="@drawable/gpay"
                 tools:ignore="HardcodedText" />
 
             <TextView
