--- a/app/src/main/res/layout/activity_marks.xml
+++ b/app/src/main/res/layout/activity_marks.xml
@@ -36,7 +36,7 @@
             tools:ignore="HardcodedText" />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
