--- a/app/src/main/res/layout/word_list.xml
+++ b/app/src/main/res/layout/word_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_downloads"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -48,4 +48,4 @@
         </LinearLayout>
 
     </RelativeLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
