--- a/app/src/main/res/drawable-anydpi/ic_downloads.xml
+++ b/app/src/main/res/drawable-anydpi/ic_downloads.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#ffc107"
+    android:tint="#FF201B"
     android:alpha="0.8">
     <path
         android:fillColor="#FF000000"
