--- a/app/src/main/res/layout/activity_shuttle_bus_timings.xml
+++ b/app/src/main/res/layout/activity_shuttle_bus_timings.xml
@@ -11,6 +11,6 @@
 
         android:background="@color/colorBackground"
         android:numColumns="2"
-        tools:context=".timings.TimingsActivity" />
+        tools:context=".timings.PublicTransportsActivity" />
 
 </RelativeLayout>
