--- a/app/src/main/res/layout/activity_train_bus_timings.xml
+++ b/app/src/main/res/layout/activity_train_bus_timings.xml
@@ -13,5 +13,5 @@
         android:background="@color/colorBackground"
         android:divider="@android:color/white"
         android:dividerHeight="1dp"
-        tools:context=".timings.TimingsActivity" />
+        tools:context=".timings.PublicTransportsActivity" />
 </RelativeLayout>
