--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -64,7 +64,7 @@
             android:layout_marginTop="5dp"
             android:textColor="@android:color/white"
             android:textSize="20sp"
-            tools:text="rajkumaar2304@gmail.com" />
+            tools:text="rajkumaar2304@icloud.com" />
 
         <ListView
             android:id="@+id/list"
