--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -2,10 +2,16 @@
   ~ Copyright (c) 2019 RAJKUMAR S
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorBackground">
+<ListView
+    android:id="@+id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".opac.SearchResultsActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ListView>
+</RelativeLayout>
