--- a/app/src/main/res/layout/activity_opacsearch.xml
+++ b/app/src/main/res/layout/activity_opacsearch.xml
@@ -78,6 +78,8 @@
         <EditText
             android:id="@+id/searchKeyword"
             android:layout_width="match_parent"
+            android:maxLines="1"
+            android:singleLine="true"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
