--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -46,8 +46,7 @@
             android:layout_below="@id/image_holder"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
-            android:fontFamily="@font/cunia"
-            android:text="RAJKUMAR S"
+            android:text="Rajkumar S"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:textSize="20sp"
@@ -60,7 +59,6 @@
             android:layout_below="@id/name"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:fontFamily="@font/cunia"
             android:text="CB.EN.U4CSE17651"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
@@ -74,7 +72,6 @@
             android:layout_below="@id/username"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:fontFamily="@font/lato"
             android:text="Current CGPA : 8.6"
             android:textColor="@android:color/holo_orange_dark"
             android:textSize="20sp" />
