--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:fontFamily">@font/lato</item>
+        <item name="android:fontFamily">@font/inter</item>
     </style>
 
     <style name="AppThemeDup" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -40,7 +40,7 @@
     <!-- Text appearance style for a category tab -->
     <style name="CategoryTabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="android:textColor">#9e9e9e</item>
-        <item name="android:fontFamily">@font/cunia</item>
+        <item name="android:fontFamily">@font/inter</item>
     </style>
 
     <style name="FullscreenTheme" parent="AppTheme">
