--- a/app/src/main/res/layout/activity_shuttle_bus_timings.xml
+++ b/app/src/main/res/layout/activity_shuttle_bus_timings.xml
@@ -2,10 +2,67 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBackground">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:id="@+id/nextBusCard"
+        android:layout_height="100dp"
+        android:layout_margin="20dp"
+        app:cardBackgroundColor="@color/black_overlay"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="3dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/busLogo"
+                android:layout_margin="16dp"
+                android:layout_width="64dp"
+                android:layout_gravity="center"
+                android:layout_height="64dp"
+
+                app:srcCompat="@drawable/bus" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+                <TextView
+                    android:id="@+id/nextBusTime"
+                    android:layout_width="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_margin="1dp"
+                    android:textColor="@color/color_3"
+                    android:textSize="16sp"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/countdownTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="1dp"
+                    android:layout_gravity="center"
+                    android:text=""
+                    android:textStyle="bold"
+                    android:textColor="#fff"
+                    android:gravity="center_vertical"
+                    android:textSize="16sp"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <GridView xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/timings_list"
+        android:layout_below="@+id/nextBusCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
