--- a/app/src/main/res/layout/activity_shuttle_bus_timings.xml
+++ b/app/src/main/res/layout/activity_shuttle_bus_timings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBackground">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
         android:id="@+id/nextBusCard"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="20dp"
         app:cardBackgroundColor="@color/black_overlay"
@@ -21,50 +21,51 @@
 
             <ImageView
                 android:id="@+id/busLogo"
-                android:layout_margin="16dp"
                 android:layout_width="64dp"
-                android:layout_gravity="center"
                 android:layout_height="64dp"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
 
                 app:srcCompat="@drawable/bus" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/nextBusTime"
                     android:layout_width="wrap_content"
-                    android:textStyle="bold"
-                    android:layout_margin="1dp"
-                    android:textColor="@color/color_3"
-                    android:textSize="16sp"
-                    android:layout_gravity="center"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="1dp"
                     android:gravity="center_vertical"
-                    android:text="" />
+                    android:text=""
+                    android:textColor="@color/color_3"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/countdownTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
                     android:layout_gravity="center"
-                    android:text=""
-                    android:textStyle="bold"
-                    android:textColor="#fff"
+                    android:layout_margin="1dp"
                     android:gravity="center_vertical"
-                    android:textSize="16sp"
-                    />
+                    android:text=""
+                    android:textColor="#fff"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <GridView xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/timings_list"
-        android:layout_below="@+id/nextBusCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/nextBusCard"
 
         android:background="@color/colorBackground"
         android:numColumns="2"
