--- a/app/src/main/res/layout/activity_train_bus_timings.xml
+++ b/app/src/main/res/layout/activity_train_bus_timings.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBackground">
+
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
         android:id="@+id/nextBusTrainCard"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="20dp"
         app:cardBackgroundColor="@color/black_overlay"
         app:cardCornerRadius="4dp"
         app:cardElevation="3dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -19,43 +21,44 @@
 
             <ImageView
                 android:id="@+id/busTrainLogo"
-                android:layout_margin="16dp"
                 android:layout_width="64dp"
+                android:layout_height="64dp"
                 android:layout_gravity="center"
-                android:layout_height="64dp" />
+                android:layout_margin="16dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:gravity="center"
-                >
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/nextBusTrainTime"
                     android:layout_width="wrap_content"
-                    android:textStyle="bold"
-                    android:textColor="@color/color_3"
-                    android:textSize="16sp"
-                    android:layout_margin="1dp"
-                    android:layout_gravity="center"
-                    android:gravity="center_vertical"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:layout_gravity="center"
+                    android:layout_margin="1dp"
+                    android:gravity="center_vertical"
+                    android:text=""
+                    android:textColor="@color/color_3"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/countdownTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_margin="1dp"
                     android:gravity="center_vertical"
                     android:text=""
-                    android:layout_margin="1dp"
-                    android:textStyle="bold"
-                    android:textColor="#fff"
-                    android:textSize="16sp"
-                    />
+                    android:textColor="@android:color/white"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/timings_list"
