--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--
+  ~ Copyright (c) 2020 RAJKUMAR S
+  -->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,11 +13,6 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.LaunchingActivity"
     tools:showIn="@layout/app_bar_main">
-
-    <nl.dionsegijn.konfetti.KonfettiView
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
     <ListView
         android:id="@+id/items_list"
@@ -43,6 +42,7 @@
 
         <ImageView
             android:layout_width="20dp"
+            android:contentDescription="@string/right_arrow"
             android:layout_height="20dp"
             android:layout_marginTop="2dp"
             android:src="@drawable/ic_chevron_right_black_24dp" />
