--- a/app/src/main/res/layout/activity_ftp.xml
+++ b/app/src/main/res/layout/activity_ftp.xml
@@ -40,7 +40,7 @@
                     android:layout_marginTop="10dp"
                     android:text="@string/ftp_steps"
                     android:textAppearance="@android:style/TextAppearance.Small"
-                    android:textColor="#fff"
+                    android:textColor="?attr/primaryTextColor"
                     tools:ignore="HardcodedText" />
 
                 <Button
@@ -49,6 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/button"
+                    android:textColor="?attr/colorBackground"
                     android:text="Start Server"
                     tools:ignore="HardcodedText" />
 
@@ -78,6 +79,7 @@
                         android:layout_marginEnd="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/button"
+                        android:textColor="?attr/colorBackground"
                         android:paddingLeft="20dp"
                         android:paddingTop="10dp"
                         android:paddingRight="20dp"
@@ -91,6 +93,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/button"
+                        android:textColor="?attr/colorBackground"
                         android:paddingLeft="20dp"
                         android:paddingTop="10dp"
                         android:paddingRight="20dp"
