Added Open/Download options for Course Resource. Added nested folders for downloads
Signed-off-by: ColdCoffee21 <dheerajvarghese@gmail.com>

--- a/app/src/main/res/layout/eresources_item.xml
+++ b/app/src/main/res/layout/eresources_item.xml
@@ -21,6 +21,7 @@
         tools:text="Hello Attendance" />
 
     <ImageView
+        android:id="@+id/right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
