Improve download files workflow
- Refactor DownloadTask/OpenTask
- Add nested folder support in DeleteFilesActivity
- Moves opening/downloading file intent to Utils

Signed-off-by: Rajkumar S <rajkumaar2304@icloud.com>

--- a/app/src/main/res/layout/delete_list_item.xml
+++ b/app/src/main/res/layout/delete_list_item.xml
@@ -8,8 +8,9 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:descendantFocusability="blocksDescendants"
     android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:focusable="true"
     android:padding="@dimen/activity_vertical_margin">
 
     <androidx.appcompat.widget.LinearLayoutCompat
