--- a/app/src/main/res/layout/delete_list_item.xml
+++ b/app/src/main/res/layout/delete_list_item.xml
@@ -3,19 +3,22 @@
   ~ Copyright (c) 2020 RAJKUMAR S
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:descendantFocusability="blocksDescendants"
     android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:focusable="true"
     android:padding="@dimen/activity_vertical_margin">
 
-    <LinearLayout
-        android:layout_width="0dp"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@id/checkbox"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="8"
+        android:layout_centerVertical="true"
         android:orientation="vertical">
 
         <TextView
@@ -32,7 +35,7 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/holo_orange_light"
             tools:text="file size will come here" />
-    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <CheckBox
         android:id="@+id/checkbox"
@@ -40,6 +43,8 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/holo_orange_light"
         android:buttonTint="@color/colorAccent"
-        tools:ignore="UnusedAttribute" />
+        tools:ignore="UnusedAttribute"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true" />
 
-</LinearLayout>
+</RelativeLayout>
