--- a/app/src/main/res/layout/activity_delete_files.xml
+++ b/app/src/main/res/layout/activity_delete_files.xml
@@ -3,7 +3,7 @@
   ~ Copyright (c) 2020 RAJKUMAR S
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,11 +11,37 @@
     android:orientation="vertical"
     tools:context=".downloads.DeleteFilesActivity">
 
+    <LinearLayout
+        android:id="@+id/dempty_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:textColor="@color/colorAccent"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/img_no_feed" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="No downloads yet!"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="#FF201B" />
+    </LinearLayout>
+
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="18" />
+        android:layout_height="wrap_content"
+        android:layout_above="@id/delete"
+        android:layout_alignParentTop="true" />
 
     <Button
         android:id="@+id/delete"
@@ -23,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_marginEnd="10dp"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/button"
         android:text="Delete selected" />
-</LinearLayout>
+</RelativeLayout>
