--- a/app/src/main/res/layout/attendance_item.xml
+++ b/app/src/main/res/layout/attendance_item.xml
@@ -20,7 +20,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
             android:layout_centerVertical="true">
 
             <ImageView
@@ -37,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:text="26%"
+                tools:text="26%"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp" />
@@ -68,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="?attr/primaryTextColor"
+                android:textColor="@android:color/holo_orange_dark"
                 tools:text="You attended 13 of 15 classes" />
 
         </LinearLayout>
